<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.pc.numbersay.QuestsFacts">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radiogroup"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trivia"
            android:text="@string/trivia"
            android:textSize="@dimen/textsizebutton"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/math"
            android:text="@string/math"
            android:textSize="@dimen/textsizebutton"
            android:onClick="onRadioButtonClicked"
            />
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:text="@string/date"
            android:textSize="@dimen/textsizebutton"
            android:onClick="onRadioButtonClicked"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/year"
            android:text="@string/year"
            android:textSize="@dimen/textsizebutton"
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edit_text"
        android:textSize="@dimen/textsizefact"
        android:padding="10dp"
        android:background="@drawable/border"
        />
    <Button
        android:layout_width="200dp"
        android:layout_height="48dp"

        android:text="@string/showfact"
        android:onClick="getQuestFact" />
</LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fact"
        android:textSize="@dimen/textsizefact"
        android:padding="10dp"/>

</LinearLayout>
